--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+</head>
+<body style="background: #262626; margin: 0;">
+    <div class="overlay">
+        <div class="content container-fluid text-white my-auto">
+            <div class="row" style="height: 100%; overflow: scroll;">
+                <div class="col-3 about-me p-4 text-center border-right">
+                    <img width="300" src="./img/me-circle.png" alt="A photo of myself">
+                    <h1 class="m-2" style="font-size: 55px;">Louis Stanko</h1>
+                    <h3>STUDENT</h3>
+                    <div class="row m-5">
+                        <div class="col-12">
+                            <div class="profile-container rounded-circle d-inline">
+                                <img class="rounded-circle" width="80" src="./img/profile_hi_res.png" alt="">
+                            </div>
+                            <hr style="background-color: white; margin-top: -40px;">
+                            <div class="row pt-5">
+                                <div class="col-12">
+                                        Hi there, I am Louis, a 16-year-old web developer, who always likes to learn. At the moment my personal interests is in fullstack webapplication development (NodeJS, React) and mobile application development (React Native, Java)
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="offset-4 col-8">
+                    <div class="row" >
+                            <div class="col-12">
+                                <h1 class="p-4" style="background-color: #1a1a1a; width: 51%; font-size: 70px; position: fixed;">My Projects</h1>
+                                <br>
+                                <ul class="mt-5 pt-5" id="repos" style="font-size: 30px; width: 100%;">
+                                </ul>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
+</body>
+</html>
