--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Louis Stanko</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
@@ -32,10 +32,38 @@
                 </div>
                 <div class="offset-4 col-8">
                     <div class="row" >
-                            <div class="col-12">
-                                <h1 class="p-4" style="background-color: #1a1a1a; width: 51%; font-size: 70px; position: fixed;">My Projects</h1>
-                                <br>
-                                <ul class="mt-5 pt-5" id="repos" style="font-size: 30px; width: 100%;">
+                            <div class="col-12 pt-5">
+                                    <h1 class="text-center">Demos</h1>
+                                    <hr style="background-color: white; width: 80%;">
+                                <ul style="font-size: 30px; width: 100%;">
+                                    <li><a class="text-white" style="text-decoration: underline;" href="https://www.github.com/Throvn/chat-app">Chat-app</a> (<a href="https://throvn-chat-app.herokuapp.com">Demo</a>)
+                                        <ul>
+                                            <li>HTML</li>
+                                            <li>Pretty self-explanatory, written in JS with express.js. The GUI however was made using HTML and CSS.</li>
+                                        </ul>
+                                    </li>
+                                    <li><a class="text-white" style="text-decoration: underline;" href="https://www.github.com/Throvn/pong">Pong</a> (<a href="./pong/">Demo</a>)
+                                        <ul>
+                                            <li>JavaScript</li>
+                                            <li>This is pong for the browser.</li>
+                                        </ul>
+                                    </li>
+                                    <li><a class="text-white" style="text-decoration: underline;" href="https://www.github.com/Throvn/hangman">Hangman</a> (<a href="./hangman/public/">Demo</a>)
+                                        <ul>
+                                            <li>JavaScript</li>
+                                            <li>A simple frontend hangman webapp.</li>
+                                        </ul>
+                                    </li>
+                                    <li><a class="text-white" style="text-decoration: underline;" href="https://www.github.com/Throvn/haya">Haya</a> (<a href="./haya/">Demo</a>)
+                                        <ul>
+                                            <li>HTML</li>
+                                            <li>A one day front-end website just for fun.</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <h1 class="text-center">Other Repositories</h1>
+                                <hr style="background-color: white; width: 80%;">
+                                <ul id="repos" style="font-size: 30px; width: 100%;">
                                 </ul>
                             </div>
                         </div>
