added newest certificate

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="heading-side h3 px-3">Profile</span>
                 <hr class="stroke-side">
                 <p class="pt-5">
-                    Hi there, I am Louis, a 16-year-old web developer, who always likes to learn. At the moment my personal interests are in fullstack webapplication development (NodeJS, React) and mobile application development (React Native, Java)
+                    Hi there, I am Louis, a 16-year-old web developer, who always likes to learn. At the moment my personal interests are in fullstack webapplication development (NodeJS) and mobile application development (React Native, Java)
                 </p>
                 <br>
                 <i class="icon-side fas fa-certificate h1 p-3 rounded-circle"></i>
@@ -35,6 +35,19 @@
                 <span class="heading-side h3 px-3">Certificates</span>
                 <hr class="stroke-side">
                 <div class="pt-5">
+                    <a class="text-dark no-decorations" href="https://www.coursera.org/account/accomplishments/certificate/967CJAGA27S4" target="_blank" rel="noopener noreferrer">
+                        <div class="border rounded p-2 bg-hover mb-2">
+                            <div class="row">
+                                <div class="col-9">
+                                    <span>Build a Modern Computer from First Principles: From Nand to Tetris (Project-Centered Course)</span>
+                                </div>
+                                <div class="col-3">
+                                    <img class="img-thumbnail" style="padding: 0;" src="./img/coursera.jpg" alt="Cousera Logo">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
                     <a class="text-dark no-decorations" href="https://www.udemy.com/certificate/UC-5VIXX6IJ/" target="_blank" rel="noopener noreferrer">
                         <div class="border rounded p-2 bg-hover mb-2">
                             <div class="row">
