Added Rushhour as demo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="heading-side h3 px-3">Profile</span>
                 <hr class="stroke-side">
                 <p class="pt-5">
-                    Hi there, I am Louis, a 16-year-old web developer, who always likes to learn. At the moment my personal interests are in fullstack webapplication development (NodeJS) and mobile application development (React Native, Java)
+                    Hi there, I am Louis, a 16-year-old web developer, who always likes to learn. At the moment my personal interests are in fullstack webapplication development (NodeJS) and mobile application development (React Native)
                 </p>
                 <br>
                 <i class="icon-side fas fa-certificate h1 p-3 rounded-circle"></i>
@@ -116,14 +116,15 @@
                                 </div>
                                 </div>
                                 <br>
-                            <div class="card">
-                                    <a href="https://github.com/Throvn/hangman"><video class="card-img-top" src="./img/HangmanExample.mp4" autoplay loop alt="Hangman Example"></video></a>
-                                <div class="card-body">
-                                    <h5 class="card-title">Hangman - The Game</h5>
-                                    <p class="card-text">A simple frontend hangman webapp.</p>
-                                    <a href="./demos/hangman/index.html" class="btn btn-primary">Go to demo</a>
-                                </div>
-                            </div>
+                                <div class="card">
+                                        <a href="https://github.com/Throvn/rushhour-browser"><video class="card-img-top" src="./img/RushhourExample.mp4" autoplay loop alt="Rushhour Example">Video not supported.</video></a>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Rushhour - The Game</h5>
+                                            <p class="card-text">A simple webapp of Rushhour™. Written in pure Javascript without any dependencies.</p>
+                                            <a href="./demos/rushhour/index.html" class="btn btn-primary">Go to demo</a>
+                                        </div>
+                                    </div>
+                            
                         </div>
                         <div class="col-lg-6">
                             <div class="card">
@@ -136,13 +137,13 @@
                             </div>
                             <br>
                             <div class="card">
-                                    <a href="https://github.com/Throvn/haya"><img class="card-img-top" src="./img/hayaExample.png" alt="Haya Example"></a>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Haya - Pure Frontend</h5>
-                                        <p class="card-text">A one day front-end website just for fun.</p>
-                                        <a href="./demos/haya/index.html" class="btn btn-primary">Go to demo</a>
-                                    </div>
+                                    <a href="https://github.com/Throvn/hangman"><video class="card-img-top" src="./img/HangmanExample.mp4" autoplay loop alt="Hangman Example"></video></a>
+                                <div class="card-body">
+                                    <h5 class="card-title">Hangman - The Game</h5>
+                                    <p class="card-text">A simple frontend hangman webapp.</p>
+                                    <a href="./demos/hangman/index.html" class="btn btn-primary">Go to demo</a>
                                 </div>
+                            </div>
                         </div>
                     </div>
                     <br>
