=Added Android bundle

--- a/demos/school-events/index.html
+++ b/demos/school-events/index.html
@@ -23,6 +23,7 @@
                 <br>
                 <br>
                 <p style="font-weight: 100;">Hier findest du die verschieden Versionen für die jeweiligen Betriebssyteme. Um <span style="text-decoration: line-through;"><a href="#sendNotification">Push-Benachrichtigungen</a> für iOS implementieren zu können</span> <span style="text-decoration: underline;">auch nur 1 Zeile für iOS schreiben zu können</span> benötigt man allerdings einen sogenannten iOS-Developer-Account, der 100$ im JAHR kostet (so reich bin ich dann auch wieder nicht). Push-Benachrichtigungen für Android funktionieren allerdings. Teste die App am besten auf beiden Platformen vorher und sag mir dann bescheid was ich verbessern soll. </p>
+                <a class="btn btn-light mb-2" download="School Events Bundle android" href="./app-release.aap">Download newer Android Bundle</a>
                 <a class="btn btn-light mb-2" download="School Events android" href="./app-release.apk">Download for Android</a>
                 <a class="btn btn-light mb-2" href="./fuck-apple.html"><strike>Download for iOS</strike></a>
             </div>
