Add throvn.github.io to google search console

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                             </div>
                             <br>
                             <div class="card">
-                                    <a href="https://github.com/Throvn/hangman"><video class="card-img-top" src="./img/HangmanExample.mp4" autoplay loop alt="Hangman Example"></video></a>
+                                    <a href="https://github.com/Throvn/color-palette"><video class="card-img-top" src="./img/HangmanExample.mp4" autoplay loop alt="Hangman Example"></video></a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Hangman - The Game</h5>
-                                    <p class="card-text">A simple frontend hangman webapp.</p>
-                                    <a href="./demos/hangman/index.html" class="btn btn-primary">Go to demo</a>
+                                    <h5 class="card-title">Picture to color palette</h5>
+                                    <p class="card-text">Convert any image to a color palette (Also available on <a href="https://codepen.io/Throvn/pen/ZEYaOmV">codepen.io</a>).</p>
+                                    <a href="./demos/color-palette/index.html" class="btn btn-primary">Go to demo</a>
                                 </div>
                             </div>
                         </div>
