Changed .png to .webp

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row my-5 px-5">
             <div class="col-lg-4 text-center pr-5 border-right">
-                <img class="img-thumbnail profile-big" width="250" src="./img/me-circle.png" alt="A photo of myself">
+                <img class="img-thumbnail profile-big" width="250" src="./img/me-circle.webp" alt="A photo of myself">
                 <br><br>
                 <h2>Louis Tim</h2>
                 <h1 id="last-name">Stanko</h1>
@@ -128,7 +128,9 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="card">
-                                <a href="https://github.com/Throvn/chat-app"><img class="card-img-top" src="./img/chatExample.png" alt="Chat Example"></a>
+                                <a href="https://github.com/Throvn/chat-app">
+                                    <img class="card-img-top" src="./img/chatExample.webp" alt="Image of my Chat app">
+                                </a>
                                 <div class="card-body">
                                     <h5 class="card-title">Chat App</h5>
                                     <p class="card-text">Pretty self-explanatory, written in JS with express.js. The GUI however was made using HTML and CSS.</p>
