--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
     <!-- jQuery first, then moment.js, then Custom JS -->
     <script src="./js/jquery.js"></script>
-    <script src="./js/moment.js"></script>
+    <script src="./js/moment.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
