Removed border bug

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Louis Stanko</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Hi there, I am Louis, a 17-year-old web developer, who always likes to learn. Check my website out!">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Louis Stanko Webdeveloper Fullstack Blog Demos">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/fonts.css"> 
     <link rel="stylesheet" href="./css/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Louis Stanko - Repositories</title>
   </head>
   <body>
     <div class="container">
         <div class="row my-5 px-5">
-            <div class="col-lg-4 text-center pr-5 border-right">
+            <div class="col-lg-4 text-center pr-5 bdr-right">
                 <img class="img-thumbnail profile-big" width="250" src="./img/me-circle.webp" alt="A photo of myself">
                 <br><br>
                 <h2>Louis Tim</h2>
@@ -24,7 +27,7 @@
                 <br>
                 <i class="icon-side far fa-address-card h1 p-3 rounded-circle"></i>
                 <br>
-                <span class="heading-side h3 px-3">Profile</span>
+                <h3 class="heading-side px-3">Profile</h3>
                 <hr class="stroke-side">
                 <p class="pt-5">
                     Hi there, I am Louis, a 17-year-old web developer, who always likes to learn. At the moment my personal interests are in fullstack webapplication development (NodeJS) and mobile application development (React Native)
@@ -32,7 +35,7 @@
                 <br>
                 <i class="icon-side fas fa-certificate h1 p-3 rounded-circle"></i>
                 <br>
-                <span class="heading-side h3 px-3">Certificates</span>
+                <h3 class="heading-side px-3">Certificates</h3>
                 <hr class="stroke-side">
                 <div class="pt-5">
                     <a class="text-dark no-decorations" href="https://www.coursera.org/account/accomplishments/certificate/967CJAGA27S4" target="_blank" rel="noopener noreferrer">
