--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <link rel="stylesheet" href="./css/fonts.css"> 
     <link rel="stylesheet" href="./css/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="./css/main.css">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150046344-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-150046344-1');
+    </script>
   </head>
   <body>
     <div class="container">
