--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 </div>
                                 <br>
                                 <div class="card">
-                                        <a href="https://github.com/Throvn/rushhour-browser"><video class="card-img-top" src="./img/RushhourExample.mp4" autoplay loop alt="Rushhour Example">Video not supported.</video></a>
+                                        <a href="https://github.com/Throvn/rushhour-browser"><img class="card-img-top" src="./img/RushhourExample.gif" alt="Rushhour Example gif"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Rushhour - The Game</h5>
                                             <p class="card-text">A simple webapp of Rushhour™. Written in pure Javascript without any dependencies.</p>
