--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <body>
     <div class="container">
         <div class="row my-5 px-5">
-            <div class="col-lg-4 text-center pr-5 bdr-right">
-                <img class="img-thumbnail profile-big" width="250" src="./img/me-circle.webp" alt="A photo of myself">
-                <br><br>
+            <div class="col-lg-4 text-center px-4 bdr-right">
+                <img class="profile-big" width="250" src="./img/me-circle.webp" alt="A photo of myself">
+                
                 <h2>Louis Tim</h2>
                 <h1 id="last-name">Stanko</h1>
                 <h5 id="job">STUDENT</h5>
