--- a/demos/pong/index.html
+++ b/demos/pong/index.html
@@ -5,12 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pong - The Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./index.css">
 </head>
-<body style="margin: 0;">
-    <div id="goals" style="position: fixed; width: 100vw; text-align: center; font-size: 30px; margin: 10px; color:white;">
+<body>
+    <div class="settings">
+        <img class="icon" onclick="toggleSettings()" src="./images/settings.webp" alt="Settings icon">
+    </div>
+    <div id="goals" class="panel">
         0 : 0
     </div>
-    <canvas style="background-color: black;" id="cnvs" class="Screen"></canvas>
-    <script src="main.js"></script>
+    <div id="modal" class="modal hide">
+        <h1 class="heading panel">Settings</h1>
+        <div class="text-right" style="margin-top: 3rem;">
+            <label for="ballSpeed" class="d-md-inline-block">Ball speed:</label> <input id="ballSpeed" type="number" value="5"> <br>
+            <label for="playerSpeed" class="d-md-inline-block">Player speed:</label> <input id="playerSpeed" type="number" value="5"> <br>
+            <div class="d-md-block">
+                <br>
+                <label for="playerHeight">Player height:</label> <input id="playerHeight" type="number" value="200"> <br>
+                <label for="playerWidth">Player width:</label> <input id="playerWidth" type="number" value="40"> <br>
+                <br>
+            </div>
+            <label for="maxGoals">Goals to win:</label> <input id="maxGoals" type="number" value="10"> <br>
+            <button onclick="resetGame()">Reset goals</button>
+            <br>
+        </div>
+        <div class="text-center">
+            <a onclick="saveSettings()"><img src="./images/check-button.png"></a>
+            <a onclick="$modal.classList = 'hide'; pause = false"><img src="./images/cancel-button.png"></a>
+        </div>
+    </div>
+    <div id="finish" class="modal hide">
+        <h1 class="heading panel">Finished</h1>
+        <div class="text-center" style="margin-top: 3rem;">
+            <b id="playerName">Nobody has</b> won this round! <br>
+            <h1 id="goalsEnd">0 : 0</h1>
+            <a onclick="playAgain()"><img src="./images/play-button.png"></a>
+        </div>
+    </div>
+    <canvas id="cnvs" class="Screen"></canvas>
+    <script src="index.js"></script>
 </body>
 </html>
