completely new design

--- a/demos/terminal/index.html
+++ b/demos/terminal/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Louis Stanko</title>
 
-    <link rel="stylesheet" href="/demos/terminal/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <script src="/demos/terminal/draggable.js"></script>
+    <script src="./draggable.js"></script>
 
     <footer class="footer">
         Made with <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="currentColor"
@@ -43,7 +43,7 @@
         <!-- You have to have at least two focusable elements on the site otherwise autocomplete does not work -->
     </footer>
     
-    <script src="/demos/terminal/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
