--- a/demos/terminal/index.html
+++ b/demos/terminal/index.html
@@ -10,7 +10,27 @@
 </head>
 
 <body>
-
+    <div class="topbar">
+        <div class="nav-item">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17px"
+                height="17px" viewBox="0 0 256 315" version="1.1" preserveAspectRatio="xMidYMid">
+                <g>
+                    <path
+                        d="M213.803394,167.030943 C214.2452,214.609646 255.542482,230.442639 256,230.644727 C255.650812,231.761357 249.401383,253.208293 234.24263,275.361446 C221.138555,294.513969 207.538253,313.596333 186.113759,313.991545 C165.062051,314.379442 158.292752,301.507828 134.22469,301.507828 C110.163898,301.507828 102.642899,313.596301 82.7151126,314.379442 C62.0350407,315.16201 46.2873831,293.668525 33.0744079,274.586162 C6.07529317,235.552544 -14.5576169,164.286328 13.147166,116.18047 C26.9103111,92.2909053 51.5060917,77.1630356 78.2026125,76.7751096 C98.5099145,76.3877456 117.677594,90.4371851 130.091705,90.4371851 C142.497945,90.4371851 165.790755,73.5415029 190.277627,76.0228474 C200.528668,76.4495055 229.303509,80.1636878 247.780625,107.209389 C246.291825,108.132333 213.44635,127.253405 213.803394,167.030988 M174.239142,50.1987033 C185.218331,36.9088319 192.607958,18.4081019 190.591988,0 C174.766312,0.636050225 155.629514,10.5457909 144.278109,23.8283506 C134.10507,35.5906758 125.195775,54.4170275 127.599657,72.4607932 C145.239231,73.8255433 163.259413,63.4970262 174.239142,50.1987249"
+                        fill="#fff" />
+                </g>
+            </svg>
+        </div>
+        <div class="nav-item" style="margin-top: 0px;">
+            Terminal
+        </div>
+        <div class="nav-item" style="margin-top: 0px;">
+            <a href="/index_normal.html" class="text-reset">Go to Homepage (for non programmers)</a>
+        </div>
+        <div class="nav-item">
+            <div id="time">Error</div>
+        </div>
+    </div>
     <div id="window" class="window">
         <div id="windowheader" class="window-header">
             <div class="btn-navigation bg-red"></div>
@@ -26,7 +46,7 @@
                 </div>
             </div>
             <div class="line">
-                <span class="pre-input">root <b class="pre-divide">❯</b></span>  
+                <span class="pre-input">root <b class="pre-divide">❯</b></span>
                 <div class="window-input" contenteditable>
                 </div>
             </div>
@@ -39,11 +59,23 @@
         Made with <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
-        </svg> by <a href="https://github.com/Throvn">Louis Stanko</a> 
+        </svg> by <a href="https://github.com/Throvn">Louis Stanko</a>
         <!-- You have to have at least two focusable elements on the site otherwise autocomplete does not work -->
     </footer>
-    
+
     <script src="./index.js"></script>
+
+    <script>
+        const $time = document.getElementById('time');
+        const updateTime = () => {
+            const now = new Date();
+            $time.innerText = now.toDateString().split(" ").splice(0, 3).join(" ") + "\t " + now.getHours() +
+                ":" + now
+                .getMinutes();
+        }
+        setInterval(updateTime, 600);
+        updateTime()
+    </script>
 </body>
 
 </html>
